tests/bad_programs/semantic_errors/true_gt_str.notc
int main() {
    if (true > "fdashg") {
        return 0;
    } else {
        return 1;
    }
}
